# CPP-CLASSIFICATION-FROM-CAFFE-divided-so-library-

./: README.md
cpp_classify_so_demo/: CMakeLists.txt  main.cpp
cpp_classify_so_demo/lib/: CMakeLists.txt  classification.cpp  classification.hpp  deploy.prototxt
cpp_classify_so_demo/model_data/: deploy.prototxt  info.json  labels.txt  mean.binaryproto  original.prototxt  solver.prototxt  train_val.prototxt
